# WorkSwitch-tauri

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
frontend/: index.html
frontend/src/: config.js  dialogs.js  launcher.js  main.js  processes.js  profiles.js  startup.js  steps.js  styles.css  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  discovery.rs  kill_wipe.rs  launcher.rs  lib.rs  lifecycle.rs  main.rs  process.rs  scheduler.rs  tray.rs
